--- a/pom.xml
+++ b/pom.xml
@@ -64,29 +64,6 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>buildnumber-maven-plugin</artifactId>
-				<version>1.4</version>
-				<executions>
-					<execution>
-						<id>buildnumber</id>
-						<phase>validate</phase>
-						<goals>
-							<goal>create</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<format>{0,number}</format>
-					<items>
-						<item>buildNumber</item>
-					</items>
-					<doCheck>false</doCheck>
-					<doUpdate>false</doUpdate>
-					<revisionOnScmFailure>unknownbuild</revisionOnScmFailure>
-				</configuration>
-			</plugin>
-			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
@@ -116,6 +93,6 @@
 				</excludes>
 			</resource>
 		</resources>
-		<finalName>${project.artifactId}${project.version}-b${buildNumber}</finalName>
+		<finalName>${project.artifactId}${project.version}</finalName>
 	</build>
 </project>
